# Grading-Experiments

./: pyproject.toml  readme.md
experiments/exp1/: run.py  solution.py  task.md  task_right_solution.md  task_right_solution_feedback.json  task_wrong_solution.md  task_wrong_solution_feedback.json  test_solution.py
experiments/exp2/: result.json  run.py  system.md  task_wrong_solution.md
